--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+
 </head>
 <body>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <app-root></app-root>
 </body>
 <script src="https://kit.fontawesome.com/ca09a710ca.js" crossorigin="anonymous"></script>
